Fixed position out-of-view check is incorrect when page is scaled https://bugs.webkit.org/show_bug.cgi?id=104303

Source/WebCore:

Reviewed by Kenneth Rohde Christiansen.

Test: compositing/layer-creation/fixed-position-out-of-view-scaled.html
      compositing/layer-creation/fixed-position-out-of-view-scaled-scroll.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForPosition): Scale the content rect of the fixed position layer before checking out-of-view.

LayoutTests:

Test if fixed position elements are correctly composited or not composited when page is scaled up and down.

Reviewed by Kenneth Rohde Christiansen.

* compositing/layer-creation/fixed-position-out-of-view-scaled.html: Added.
* compositing/layer-creation/fixed-position-out-of-view-scaled-expected.txt: Added.
* compositing/layer-creation/fixed-position-out-of-view-scaled-scroll.html: Added.
* compositing/layer-creation/fixed-position-out-of-view-scaled-scroll-expected.txt: Added.


Canonical link: https://commits.webkit.org/122954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137399 268f45cc-cd09-0410-ab3c-d52691b4dbfc